--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h3>
 <a id="tervetuloa-jyväskylän-yliopiston-tietotekniikan-ainejärjestön-sivuille" class="anchor" href="#tervetuloa-jyv%C3%A4skyl%C3%A4n-yliopiston-tietotekniikan-ainej%C3%A4rjest%C3%B6n-sivuille" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Tervetuloa Jyväskylän yliopiston tietotekniikan ainejärjestön sivuille</h3>
 
-<p>Linkki Jyväskylä ry on tietotekniikan ainejärjestö, joka ei saa nettisivujaan pysymään pystyssä. </p>
+	<p>Linkki Jyväskylä ry on tietotekniikan ainejärjestö, joka ei saa <a href="http://www.linkkijkl.fi">nettisivujaan</a> pysymään pystyssä. </p>
 
 <blockquote>
 <p>siinä tapaukses en taida tietää ainejärjestöä jolla ei olis nettisivua, pl. linkki :D</p>
@@ -42,7 +42,7 @@
 <h3>
 <a id="ota-yhteyttä" class="anchor" href="#ota-yhteytt%C3%A4" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Ota yhteyttä!</h3>
 
-<p>Tule IRCNetin kanavalle #linkki.jkl ja juttele mukavien tyyppien kanssa.</p>
+<p>Tule IRCNetin kanavalle #linkki.jkl juttelemaan mukavien tyyppien kanssa.</p>
       </section>
     </div>
 
