--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
 </blockquote>
 
 <h3>
+<a id="uutisia" class="anchor" href="#uutisia" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Uutisia</h3>
+
+<p>2016-07-13 Irkkiä voi nyt käyttää serveriltä irc.cc.tut.fi.</p>
+
+<h3>
 <a id="ota-yhteyttä" class="anchor" href="#ota-yhteytt%C3%A4" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Ota yhteyttä!</h3>
 
 <p>Tule IRCNetin kanavalle #linkki.jkl juttelemaan mukavien tyyppien kanssa.</p>
