--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h3>
 <a id="tervetuloa-jyväskylän-yliopiston-tietotekniikan-ainejärjestön-sivuille" class="anchor" href="#tervetuloa-jyv%C3%A4skyl%C3%A4n-yliopiston-tietotekniikan-ainej%C3%A4rjest%C3%B6n-sivuille" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Tervetuloa Jyväskylän yliopiston tietotekniikan ainejärjestön sivuille</h3>
 
-	<p>Linkki Jyväskylä ry on tietotekniikan ainejärjestö, joka ei saa <a href="http://www.linkkijkl.fi">nettisivujaan</a> pysymään pystyssä. </p>
+	<p>Linkki Jyväskylä ry on tietotekniikan ainejärjestö, joka saa silloin tällöin <a href="http://www.linkkijkl.fi">nettisivunsa</a> pysymään pystyssä. </p>
 
 <blockquote>
 <p>siinä tapaukses en taida tietää ainejärjestöä jolla ei olis nettisivua, pl. linkki :D</p>
@@ -41,6 +41,8 @@
 
 <h3>
 <a id="uutisia" class="anchor" href="#uutisia" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Uutisia</h3>
+
+<p>2016-07-19 <a href="http://www.linkkijkl.fi">Linkin nettisivut</a> ovat olleet pystyssä jo pari päivää.</p>
 
 <p>2016-07-13 Irkkiä voi nyt käyttää serveriltä irc.cc.tut.fi.</p>
 
