--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 <h3>
 <a id="uutisia" class="anchor" href="#uutisia" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Uutisia</h3>
 
+<p>Linkki Jyväskylä ry:n <a href="https://www.instagram.com/linkkijkl/">Instagram-sivujen</a> kuvauksessa lukee virheellisesti "Linkki ry".</p>
+
 <p>2016-08-23 Linkin nykyisestä hallituksesta on vaikea saada tieto, mutta ainakin <a href="http://linkkijkl.fi/linkki/hallitusjatoimihenkilot/hallitus-2012/">vuoden 2012 hallitus</a> on pystynyt tekemään itsestään esittelysivun. PÄIVITYS: <a href="http://linkkijkl.fi/linkki/hallitusjatoimihenkilot/">Nykyinen hallitus</a> onkin tehnyt hieman vaikeammin löydettävän sivun.</p>
 
 <p>2016-07-19 <a href="http://www.linkkijkl.fi">Linkin nettisivut</a> ovat olleet pystyssä jo pari päivää.</p>
