Added the actual link

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <h3>
 <a id="uutisia" class="anchor" href="#uutisia" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Uutisia</h3>
 
-<p>2016-09-29 <a href="">Linkin nettisivut</a> taas alhaalla.</p>
+<p>2016-09-29 <a href="http://www.linkkijkl.fi">Linkin nettisivut</a> taas alhaalla.</p>
 <blockquote>
 <p>mikä linkin nettisivuja vaivaa?</p>
 </blockquote>
