Commented out, web pages are working

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <h3>
 <a id="uutisia" class="anchor" href="#uutisia" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Uutisia</h3>
 
-<p>2016-10-06 Kauanhan sitä iloa kestikin. <a href="http://www.linkkijkl.fi">Linkin nettisivut</a> ovat jälleen alhaalla.</p>
+<!-- <p>2016-10-06 Kauanhan sitä iloa kestikin. <a href="http://www.linkkijkl.fi">Linkin nettisivut</a> ovat jälleen alhaalla.</p> -->
 
 <p>2016-10-05 <a href="http://www.linkkijkl.fi">Linkin nettisivut</a> poikkeuksellisesti palvelevat jälleen käyttäjiään. Onnittelut webbitiimille!</p>
 
