--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
 
 <!-- <p>2016-10-06 Kauanhan sitä iloa kestikin. <a href="http://www.linkkijkl.fi">Linkin nettisivut</a> ovat jälleen alhaalla.</p> -->
 
+<p>2016-10-19 Linkin syyslanit ovat 25. - 27.11., mutta nettisivuilla niistä ei ole tietoa. Paikata ei myöskään ole varmuutta.</p>
+
 <p>2016-10-17 Telegram-ohjelmiston IRC-verkkoon siltaava botti saattoi liittyä #linkki.jkl-kanavalle tai saattoi olla liittymättä. Odotamme jännityksellä lopputulemaa.</p>
 
 <p>2016-10-10 Linkin nettisivuilla ei ole tietoa Fuksisitseistä, joten tässä <a href="https://goo.gl/forms/Q5sVpOwp6xRaGfSo1">ilmoittautumiskanta fukseille</a> ja <a href="https://goo.gl/forms/aJu24kHGnAssHnHK2">ilmoittautumiskanta vanhoille</a>. Linkin fuksisitsit Lillukassa, Kortepohjan YO-kylässä maanantaina 17.10 alkaen klo 19:00. Lisätietoa ainakin <a href="https://www.facebook.com/events/1745891065665767/">Facebookista</a>.</p>
