--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 <!-- <p>2016-10-06 Kauanhan sitä iloa kestikin. <a href="http://www.linkkijkl.fi">Linkin nettisivut</a> ovat jälleen alhaalla.</p> -->
 
-<p>2016-10-19 Linkin syyslanit ovat 25. - 27.11., mutta nettisivuilla niistä ei ole tietoa. Paikata ei myöskään ole varmuutta.</p>
+<p>2016-10-19 Linkin syyslanit ovat 25. - 27.11., mutta nettisivuilla niistä ei ole vielä tietoa. Paikasta ei myöskään ole varmuutta.</p>
 
 <p>2016-10-17 Telegram-ohjelmiston IRC-verkkoon siltaava botti saattoi liittyä #linkki.jkl-kanavalle tai saattoi olla liittymättä. Odotamme jännityksellä lopputulemaa.</p>
 
