--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
 
 <!-- <p>2016-10-06 Kauanhan sitä iloa kestikin. <a href="http://www.linkkijkl.fi">Linkin nettisivut</a> ovat jälleen alhaalla.</p> -->
 
+<p>2016-10-31 <a href="http://users.jyu.fi/~nieminen/">Paavo Niemisen</a> väitöstilaisuus on 9. joulukuuta 2016 klo 12.00 alkaen. Paikkana MaA 103. Tapahtumalla on oma <a href="https://www.facebook.com/events/1850363651860762/">Facebook-sivunsa</a>, jossa on lisätietoa tapahtumasta. </p>
+
 <p>2016-10-19 Linkin syyslanit ovat 25. - 27.11., mutta nettisivuilla niistä ei ole vielä tietoa. Paikasta ei myöskään ole varmuutta.</p>
 
 <p>2016-10-17 Telegram-ohjelmiston IRC-verkkoon siltaava botti saattoi liittyä #linkki.jkl-kanavalle tai saattoi olla liittymättä. Odotamme jännityksellä lopputulemaa.</p>
