--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
 
 <!-- <p>2016-10-06 Kauanhan sitä iloa kestikin. <a href="http://www.linkkijkl.fi">Linkin nettisivut</a> ovat jälleen alhaalla.</p> -->
 
+<p>2017-01-30 <a href="http://www.linkkijkl.fi">Linkin nettisivut</a> ovat uudistuneet, mistä onnittelu webbitiimille!</p>
+
 <p>2016-12-12 <a href="http://tinyurl.com/linkkijkl-telegram">Linkin Telegram-ryhmä</a> on käytettävissä, jos IRC ei tunnu omalta. Muistakaa kuitenkin #linkki.jkl IRCnetissä.</p>
 
 <p>2016-12-11 Linkki ei esittele nettisivuillaan tulevaa vuoden 2017 hallitusta. Jos joku ilmiantaa nimet niin heidät voidaan esitellä tietysti tässä.</p>
