--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
 
 <!-- <p>2016-10-06 Kauanhan sitä iloa kestikin. <a href="http://www.linkkijkl.fi">Linkin nettisivut</a> ovat jälleen alhaalla.</p> -->
 
+<p>2017-05-10 Linkki.online-palvelu tulee lopettamaan toimintansa elokuun 22. mennessä verkkotunnuksen vanhentumisen myötä.</p>
+
 <p>2017-01-30 <a href="http://www.linkkijkl.fi">Linkin nettisivut</a> ovat uudistuneet, mistä onnittelu webbitiimille!</p>
 
 <p>2016-12-12 <a href="http://tinyurl.com/linkkijkl-telegram">Linkin Telegram-ryhmä</a> on käytettävissä, jos IRC ei tunnu omalta. Muistakaa kuitenkin #linkki.jkl IRCnetissä.</p>
